# obsidian-pilot

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_ISOLATION.md  CONTRIBUTING.md  FEATURE_LAYERS.md  GITHUB_CHECKLIST.md  IMPLEMENTATION_PLAN.md  INSTALL.md  LICENSE  README.md  ROADMAP.md  build.js  main.ts  manifest.json  modal.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  styles.css  tsconfig.json  项目规划书.md
.github/: FUNDING.yml
.github/workflows/: release.yml  test.yml
docs/: api.md
docs/tutorial/: 01-quick-start.md  02-llm-wiki-setup.md  03-hermes-memory.md  04-templater-templates.md  05-troubleshooting.md  06-advanced-workflows.md  README.md
obsidian-pilot-api/: .gitignore  LICENSE  README.md  pyproject.toml
obsidian-pilot-api/obsidian_pilot_api/: __init__.py  config.py  main.py
obsidian-pilot-api/obsidian_pilot_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
obsidian-pilot-api/obsidian_pilot_cli/: __init__.py  __main__.py
obsidian-pilot-api/tests/: test_api.py
src/: __init__.py  __main__.py  init.py  link.py  main.py  maintain.py  note_import.py  route.py  wizard.py
tests/: test_all.py  test_e2e.py
