[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-pilot"
version = "0.1.0"
description = "Your First Obsidian Assistant - AI-powered note organization and knowledge graph builder"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "NingXiaoBan", email = "18607570527tong@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "scikit-learn>=1.3.0",
    "networkx>=3.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["obsidian", "note-taking", "knowledge-management", "ai-assistant"]

[project.scripts]
obsidian-pilot = "src.main:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
