[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "obsidian-pilot-api"
version = "0.1.0"
description = "FastAPI backend for Obsidian Pilot - LLM-Wiki bridge"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "NingXiaoBan", email = "18607570527tong@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0",
    "scikit-learn>=1.3.0",
    "networkx>=3.0",
]

[project.scripts]
obsidian-pilot-api = "obsidian_pilot_api.main:run_server"

[tool.setuptools.packages.find]
include = ["obsidian_pilot_api*"]
